feat: add lightweight ml model